# airgap

./: .gitignore  Cargo.toml  build-android.sh  build-ios.sh  build-js.sh  build.rs  cbindgen.toml  test-kotlin.sh  test-objc.sh
.github/workflows/: release.yml
android/: .gitignore  build.gradle  settings.gradle  test-kotlin.sh
android/airgap/: build.gradle  consumer-rules.pro  proguard-rules.pro
android/airgap/src/main/: AndroidManifest.xml
android/airgap/src/main/kotlin/app/rkz/airgap/: AirgapDecoder.kt  AirgapEncoder.kt  AirgapException.kt  QRResult.kt
android/airgap/src/test/kotlin/app/rkz/airgap/: AirgapTests.kt
include/: airgap.h
objc/: AGDecoder.h  AGDecoder.m  AGEncoder.h  AGEncoder.m  AGQRResult.h  AGQRResult.m
objc/Tests/: AirgapTests.m
src/: c_result.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  ffi_android.rs  ffi_result.rs  ffi_wasm.rs  lib.rs  protocol.rs
