[package]
name = "airgap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
qrcode = "0.14"
image = "0.25"
base45 = "3.2.0"
crc32fast = "1.4"
rand = "0.10.0"
thiserror = "2.0.18"
jni = { version = "0.21.1", default-features = false }  # JNI support for all JVM targets

[build-dependencies]
cbindgen = "0.29.2"